<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context="com.example.ukeleleapp.MainActivity"
    android:id="@+id/drawer2">


    <RelativeLayout
        android:id="@+id/MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/uke"
        android:screenOrientation="portrait"
        tools:context="com.example.ukeleleapp.MainActivity">


        <include android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/drawer_toolbar">
        </include>

        <include
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            layout="@layout/content_main" />

        <Button
            android:id="@+id/SearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignTop="@+id/divider"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/Button2" />

        <EditText
            android:id="@+id/SongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="90dp"
            android:layout_marginTop="225dp"
            android:ems="10"
            android:hint="@string/EditText"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ArtistText"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="274dp"
            android:layout_marginEnd="85dp"
            android:ems="10"
            android:hint="@string/Artist"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/by"
            android:layout_width="56dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="88dp"
            android:layout_marginTop="282dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/ArtistText"
            android:text="by"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="104dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navigation_view"
        app:menu="@menu/main_drawer_menu"
        app:headerLayout="@layout/drawer_header"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        >

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>

